err/django-ipgeo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/common'...
Listing './lib/python3.5/site-packages/common/data'...
Listing './lib/python3.5/site-packages/common/data/app_template'...
Compiling './lib/python3.5/site-packages/common/decorators.py'...
***   File "./lib/python3.5/site-packages/common/decorators.py", line 61
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/common/fields.py'...
***   File "./lib/python3.5/site-packages/common/fields.py", line 94
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/common/mail.py'...
***   File "./lib/python3.5/site-packages/common/mail.py", line 49
    except KeyError, AttributeError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/common/management'...
Listing './lib/python3.5/site-packages/common/management/commands'...
Compiling './lib/python3.5/site-packages/common/management/commands/common_startapp.py'...
***   File "./lib/python3.5/site-packages/common/management/commands/common_startapp.py", line 25
    print 'Creating directory: %s' % dst
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/common/progress.py'...
***   File "./lib/python3.5/site-packages/common/progress.py", line 22
    print 'Processed %d %s%s' % (self.count, self.name, percents)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/common/templates'...
Listing './lib/python3.5/site-packages/common/templatetags'...
Listing './lib/python3.5/site-packages/django_common-0.1.51.egg-info'...
Listing './lib/python3.5/site-packages/django_ipgeo-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/ipgeo'...
Listing './lib/python3.5/site-packages/ipgeo/management'...
Listing './lib/python3.5/site-packages/ipgeo/management/commands'...
Compiling './lib/python3.5/site-packages/ipgeo/management/commands/ipgeo_update.py'...
***   File "./lib/python3.5/site-packages/ipgeo/management/commands/ipgeo_update.py", line 16
    print 'Downloading the archive'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ipgeo/models.py'...
***   File "./lib/python3.5/site-packages/ipgeo/models.py", line 31
    print rang.country, rang.location
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
